--- a/src/reportData/dataSupplier.jrxml
+++ b/src/reportData/dataSupplier.jrxml
@@ -24,17 +24,21 @@
 	<title>
 		<band height="65" splitType="Stretch">
 			<staticText>
-				<reportElement x="3" y="22" width="100" height="20" uuid="122315e1-d89a-48a7-a3bd-5d27e4e346f8"/>
+				<reportElement x="2" y="1" width="100" height="20" uuid="122315e1-d89a-48a7-a3bd-5d27e4e346f8"/>
 				<text><![CDATA[PT. Ismoyo Express]]></text>
 			</staticText>
 			<image>
 				<reportElement x="491" y="0" width="64" height="63" uuid="2a4d5ec3-fb2f-4bc7-be79-cec88bae1d21"/>
 				<imageExpression><![CDATA["C:\\Users\\Bule\\Documents\\NetBeansProjects\\ManajemenInventory\\src\\manajemeninventory\\50X50.png"]]></imageExpression>
 			</image>
+			<staticText>
+				<reportElement x="3" y="20" width="423" height="42" uuid="186eae81-640d-4f69-9c5e-2bd900ef026d"/>
+				<text><![CDATA[Jl. M. Kahfi II, No. 90, Ruko Cahaya Timbul Blok C9, RT 13/RW 9, Srengseng Sawah, Kec. Jagakarsa, Jakarta Selatan, 12630]]></text>
+			</staticText>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="139" splitType="Stretch">
+		<band height="49" splitType="Stretch">
 			<staticText>
 				<reportElement x="170" y="10" width="218" height="22" uuid="a5819f95-15c8-4757-8385-49e8e3798492"/>
 				<textElement>
@@ -45,22 +49,6 @@
 			<line>
 				<reportElement x="169" y="32" width="219" height="1" uuid="e8270d72-8276-4971-b0fe-b5b42e373fa1"/>
 			</line>
-			<textField>
-				<reportElement x="56" y="58" width="423" height="20" uuid="d7268d7f-1728-43c1-be2c-ea5115137304"/>
-				<textFieldExpression><![CDATA[new SimpleDateFormat("EEEE, dd MMMM yyyy", new java.util.Locale("id")).format(new Date())]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="4" y="58" width="100" height="20" uuid="a94d5298-85bb-410e-aa8f-ff5beeac2e43"/>
-				<text><![CDATA[Tanggal	:]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="4" y="78" width="100" height="20" uuid="916202fe-ebe3-4d0d-bfea-2a02a15c5861"/>
-				<text><![CDATA[Alamat	:]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="56" y="78" width="423" height="42" uuid="186eae81-640d-4f69-9c5e-2bd900ef026d"/>
-				<text><![CDATA[Jl. M. Kahfi II, No. 90, Ruko Cahaya Timbul Blok C9, RT 13/RW 9, Srengseng Sawah, Kec. Jagakarsa, Jakarta Selatan, 12630]]></text>
-			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
@@ -137,16 +125,30 @@
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="96" splitType="Stretch">
+		<band height="117" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="6" width="100" height="20" uuid="3ab1135d-f52b-4d04-b44b-2fcc8c007e41"/>
+				<reportElement x="0" y="26" width="100" height="20" uuid="3ab1135d-f52b-4d04-b44b-2fcc8c007e41"/>
 				<textElement textAlignment="Center"/>
-				<text><![CDATA[Pemberi Kuasa]]></text>
+				<text><![CDATA[Direktur]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="76" width="100" height="20" uuid="dafbc07a-1fed-4ed1-a48f-0f43d522f662"/>
+				<reportElement x="0" y="97" width="100" height="20" uuid="dafbc07a-1fed-4ed1-a48f-0f43d522f662"/>
 				<textElement textAlignment="Center"/>
-				<text><![CDATA[(		)]]></text>
+				<text><![CDATA[(    Ismoyo    )]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="455" y="6" width="423" height="20" uuid="d7268d7f-1728-43c1-be2c-ea5115137304"/>
+				<textFieldExpression><![CDATA[new SimpleDateFormat("EEEE, dd MMMM yyyy", new java.util.Locale("id")).format(new Date())]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="455" y="26" width="100" height="20" uuid="2d2ad46b-db25-404d-a620-f954adba16f6"/>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[Administrasi]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="455" y="97" width="100" height="20" uuid="f2fbb11a-fad1-45a9-86b7-9a7957f8a73a"/>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[(    Amanda    )]]></text>
 			</staticText>
 		</band>
 	</columnFooter>
